tests/compile_fail/invalid_scope_selector_list_empty_literal.rs
use surgeist_style::ScopeSelectorList;

fn main() {
    let _list = ScopeSelectorList {
        selectors: Vec::new(),
    };
}
