tests/compile_fail/invalid_scope_selector_list_empty_literal.stderr
error[E0451]: field `selectors` of struct `ScopeSelectorList` is private
 --> tests/compile_fail/invalid_scope_selector_list_empty_literal.rs:5:9
  |
4 |     let _list = ScopeSelectorList {
  |                 ----------------- in this type
5 |         selectors: Vec::new(),
  |         ^^^^^^^^^ private field
